--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -1,6 +1,7 @@
 @use "./variables.scss" as *;
 @use "./syntax.scss";
 @use "./callouts.scss";
+@use "./fonts.scss";
 
 html {
   scroll-behavior: smooth;
@@ -69,8 +70,8 @@ strong {
 }
 
 a {
-  font-weight: $semiBoldWeight;
-  text-decoration: none;
+  font-weight: $normalWeight;
+  text-decoration: underline;
   transition: color 0.2s ease;
   color: var(--secondary);
 
