Quartz sync: Sep 9, 2024, 1:39 AM

--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -71,7 +71,7 @@ button#explorer {
       transform 0.35s ease,
       opacity 0.2s ease;
     & li > a {
-      color: var(--dark);
+      color: var(--secondary);
       opacity: 0.75;
       pointer-events: all;
     }
