--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -115,7 +115,7 @@ svg {
     padding-right: 0;
     display: flex;
     align-items: center;
-    font-family: var(--headerFont);
+    font-family: var(--bodyFont);
 
     & span {
       font-size: 0.95rem;
