Quartz sync: Sep 10, 2024, 12:11 PM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -2,6 +2,7 @@
 @use "./syntax.scss";
 @use "./callouts.scss";
 @use "./fonts.scss";
+@use "./twemoji-awesome.scss";
 
 html {
   scroll-behavior: smooth;
