--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -2,7 +2,7 @@
 @use "./syntax.scss";
 @use "./callouts.scss";
 @use "./fonts.scss";
-@use "./twemoji-awesome.scss";
+@use "./twemoji.scss";
 
 html {
   scroll-behavior: smooth;
@@ -10,6 +10,11 @@ html {
   overflow-x: hidden;
   width: 100vw;
   font-family: "Inter";
+}
+
+body {
+	--bodyFont: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI",Twemoji,Helvetica,Arial,sans-serif;
+	--headerFont: "Vollkorn",-apple-system,BlinkMacSystemFont,"Segoe UI",Twemoji,Helvetica,Arial,sans-serif;
 }
 
 p {
