--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -13,8 +13,8 @@ html {
 }
 
 body {
-	--bodyFont: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI",Twemoji,Helvetica,Arial,sans-serif;
-	--headerFont: "Vollkorn",-apple-system,BlinkMacSystemFont,"Segoe UI",Twemoji,Helvetica,Arial,sans-serif;
+	--bodyFont: "Inter",Twemoji,sans-serif;
+	--headerFont: "Vollkorn",Twemoji,sans-serif;
 }
 
 p {
