Quartz sync: Sep 13, 2024, 11:44 AM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -2,19 +2,13 @@
 @use "./syntax.scss";
 @use "./callouts.scss";
 @use "./fonts.scss";
-@use "./twemoji.scss";
+@use "./blobmoji.scss";
 
 html {
   scroll-behavior: smooth;
   text-size-adjust: none;
   overflow-x: hidden;
   width: 100vw;
-  font-family: "Inter";
-}
-
-body {
-	--bodyFont: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI",Twemoji,Helvetica,Arial,sans-serif;
-	--headerFont: "Vollkorn",-apple-system,BlinkMacSystemFont,"Segoe UI",Twemoji,Helvetica,Arial,sans-serif;
 }
 
 p {
