Quartz sync: Sep 15, 2024, 2:10 AM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,2 +1,29 @@
 @use "./base.scss";
 
+li {
+	list-style-type: disc;
+}
+
+li::marker {
+	color: var(--lightgray);
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--lightgray); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
