--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -35,17 +35,16 @@ h2 {
 }
 
 body {
-	--custom-headerFont: Hack, Blobs, Blobmoji;
+	--bodyFont: "Public Sans",Blobs,Blobmoji;
+	--headerFont: "Hack",Blobs,Blobmoji;
+	--codeFont: "Hack",Blobs,Blobmoji;
 }
 
-h1 {
-	font-family: var(--headerFont);
-}
-
+h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	font-family: var(--custom-headerFont);
+	font-family: var(--headerFont);
 }
