--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,13 +1,14 @@
 @use "./base.scss";
-
+/* circular bullets */
 li {
 	list-style-type: disc;
 }
-
+/* colored bullets */
 li::marker {
 	color: var(--lightgray);
 }
 
+/* Scrollbar */
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -27,17 +28,12 @@ li::marker {
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+/* End of Scrollbar */
 
 /* Headings */
 h1,
 h2 {
 	font-weight: 600;
-}
-
-body {
-	--bodyFont: "Public Sans",Blobs,Blobmoji;
-	--headerFont: "Hack",Blobs,Blobmoji;
-	--codeFont: "Hack",Blobs,Blobmoji;
 }
 
 h1,
@@ -47,4 +43,11 @@ h4,
 h5,
 h6 {
 	font-family: var(--headerFont);
+}
+
+/* Custom Fonts or Typography */
+body {
+	--bodyFont: "Public Sans",Blobs,Blobmoji;
+	--headerFont: "Hack",Blobs,Blobmoji;
+	--codeFont: "Hack",Blobs,Blobmoji;
 }
